Fix hint button and try to center on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,21 @@
 
 body {
   width: 99%;
-  margin: 0 auto;
+  height:100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #F4F4F4;
+}
+
+.wrapper{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 code {
@@ -28,7 +36,8 @@ h1 {
 
 #root {
   width: 320px;
-  margin: 30px auto 0;
+  height:100%;
+  margin: 30px auto;
 }
 
 .card {
@@ -996,6 +1005,7 @@ footer {
     box-shadow: 0 10px 13px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
 
+
   .button:hover:enabled { 
     box-shadow: 0 10px 13px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     color: white;
@@ -1019,7 +1029,7 @@ footer {
 
   .hint:hover {
     background-color: yellow;
-    color: black;
+    color:black !Important;
   }
   
   .hint:disabled {
